--- a/sampleHTML/index.css
+++ b/sampleHTML/index.css
@@ -1,10 +1,12 @@
 .content {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding: 30px 50px;
-    border-radius: 5px;
-    border: 1px solid #2761ae;
-    background: #c8d7ea;
+    background: #f1f4f7;
+}
+
+body{
+    background: #f1f4f7;
 }
 
 @media only screen and (max-width: 900px) {
@@ -31,13 +33,19 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    background: #eef6fe;
     margin: 0;
     padding: 0;
 }
 
 #content{
     padding:10px;
+    padding-bottom: 0;
+}
+
+.or{
+    text-align: center;
+    margin-bottom: 0;
+    font-size: 14px;
 }
 
 
@@ -47,21 +55,26 @@ body{
 }
 
 .content > div > .img-container {
-    border:1px solid gray;
     background: transparent;
     outline: none;
     cursor: pointer;
     border-radius: 15px;
+    filter:grayscale(70%);
+    display: flex;
+    flex-direction: column;
+
 }
 
 .content > div > .img-container.active {
-    border:3px solid #2761ae;
-    background: #eef6fe;
+    background: #fff;
+    box-shadow: 0px 0px 7px 2px #d4d4d4;
+    filter: none;
 }
 
 .content > div > .img-container > img {
     height: 150px;
-    padding: 30px;
+    padding: 15px;
+    padding-bottom: 0;
 }
 
 .title{
@@ -71,16 +84,23 @@ body{
 .btn {
     margin: 0 auto;
     display: block;
+    background: white;
+    border: 2px solid #2760ae;
     margin-top: 15px;
-    background: #2760ae;
-    color: white;
-    padding: 25px 40px;
-    border: none;
+    color: #2760ae;
+    padding: 15px;
     border-radius: 10px;
-    width: 300px;
+    width: 200px;
     outline: none;
-    font-size: 22px;
+    font-size: 18px;
     cursor: pointer;
+    transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition-duration: 0.5s;
+}
+
+.btn:hover{
+    background-color: #2760ae;
+    color: #fff;
 }
 
 .loaderOuter{
@@ -107,7 +127,7 @@ body{
 
 
 .button-outer{
-    padding: 0 100px;
+    padding: 0 50px;
 }
 
 
@@ -127,8 +147,16 @@ body{
 }
 
 #canvas.visible {
-    border: 2px solid #2760ae;
-    border-radius: 30px;
+    border-radius: 5px;
+}
+
+.canvas-outer{
+    margin-top: 15px;
+    padding: 20px;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 3px #eae9e9;
+    display: none;
 }
 
 .swal-text{ 
