--- a/sampleHTML/index.css
+++ b/sampleHTML/index.css
@@ -1,148 +1,176 @@
 .content {
-    display: flex;
-    justify-content: space-around;
-    padding: 30px 50px;
-    border-radius: 5px;
-    border: 1px solid #2761ae;
-    background: #c8d7ea;
+  display: flex;
+  justify-content: center;
+  padding: 30px 50px;
+  background: #f1f4f7;
+}
+
+body {
+  background: #f1f4f7;
 }
 
 @media only screen and (max-width: 900px) {
-    .content {
-        flex-direction: column;
-        padding:0px;
-    }
+  .content {
+    flex-direction: column;
+    padding: 0px;
+  }
 
-    .button-outer{
-        padding: 10px 0px !important;
-    }
+  .button-outer {
+    padding: 10px 0px !important;
+  }
 
-    .content > div > .img-container {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-    }
+  .content > div > .img-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
 
-    .content > div > .img-container > img {
-        height: 50px!important;
-        padding:10px!important;
-    }
-}  
-
-body{
-    font-family: 'Roboto', sans-serif;
-    background: #eef6fe;
-    margin: 0;
-    padding: 0;
+  .content > div > .img-container > img {
+    height: 50px !important;
+    padding: 10px !important;
+  }
 }
 
-#content{
-    padding:10px;
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
+#content {
+  padding: 10px;
+  padding-bottom: 0;
+}
+
+.or {
+  text-align: center;
+  margin-bottom: 0;
+  font-size: 14px;
+}
 
 .content {
-    margin: 10px;
-    margin-top: 0;
+  margin: 10px;
+  margin-top: 0;
 }
 
 .content > div > .img-container {
-    border:1px solid gray;
-    background: transparent;
-    outline: none;
-    cursor: pointer;
-    border-radius: 15px;
+  background: transparent;
+  outline: none;
+  cursor: pointer;
+  border-radius: 15px;
+  filter: grayscale(70%);
+  display: flex;
+  flex-direction: column;
 }
 
 .content > div > .img-container.active {
-    border:3px solid #2761ae;
-    background: #eef6fe;
+  background: #fff;
+  box-shadow: 0px 0px 7px 2px #d4d4d4;
+  filter: none;
 }
 
 .content > div > .img-container > img {
-    height: 150px;
-    padding: 30px;
+  height: 150px;
+  padding: 15px;
+  padding-bottom: 0;
 }
 
-.title{
-    text-align: center;
+.title {
+  text-align: center;
 }
 
 .btn {
-    margin: 0 auto;
-    display: block;
-    margin-top: 15px;
-    background: #2760ae;
-    color: white;
-    padding: 25px 40px;
-    border: none;
-    border-radius: 10px;
-    width: 300px;
-    outline: none;
-    font-size: 22px;
-    cursor: pointer;
+  margin: 0 auto;
+  display: block;
+  background: white;
+  border: 2px solid #2760ae;
+  margin-top: 15px;
+  color: #2760ae;
+  padding: 15px;
+  border-radius: 10px;
+  width: 200px;
+  outline: none;
+  font-size: 18px;
+  cursor: pointer;
+  transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition-duration: 0.5s;
 }
 
-.loaderOuter{
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    top: 0;
-    background: #a3c0decf;
-    z-index: 99;
+.btn:hover {
+  background-color: #2760ae;
+  color: #fff;
+}
+
+.loaderOuter {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  background: #a3c0decf;
+  z-index: 99;
 }
 
 #backSide {
-    display: none;
+  display: none;
 }
 
 .loaderOuter img {
-    position: absolute;
-    top: calc(50vh - 40px);
-    left: calc(50vw - 40px);
-    height: 80px;
-    width: 80px;
-    z-index: 10;
+  position: absolute;
+  top: calc(50vh - 40px);
+  left: calc(50vw - 40px);
+  height: 80px;
+  width: 80px;
+  z-index: 10;
 }
 
-
-.button-outer{
-    padding: 0 100px;
+.button-outer {
+  padding: 0 50px;
 }
-
 
 #alert {
-    height: 50px;
-    width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #2760ae;
-    border-radius: 15px;
-    box-shadow: 2px 2px 19px 3px #8480802e;
-    position: absolute;
-    top: 40px;
-    left: 350px;
-    background: #eef6fe9e;
+  height: 50px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #2760ae;
+  border-radius: 15px;
+  box-shadow: 2px 2px 19px 3px #8480802e;
+  position: absolute;
+  top: 40px;
+  left: 350px;
+  background: #eef6fe9e;
 }
 
 #canvas.visible {
-    border: 2px solid #2760ae;
-    border-radius: 30px;
+  border-radius: 5px;
 }
 
-.swal-text{ 
-    text-align: center;
+#canvasTxt.visible {
+  border-radius: 5px;
+  position: absolute;
+  top: 25px;
 }
 
-.canvas-container{
-    position: relative;
-    display: flex;
-    justify-content: center;
+.canvas-outer {
+  margin-top: 15px;
+  padding: 20px;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 3px #eae9e9;
+  display: none;
 }
 
-#nameText{
-    text-transform: capitalize;
+.swal-text {
+  text-align: center;
 }
 
-  
+.canvas-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+#nameText {
+  text-transform: capitalize;
+}
